tests/fixtures/invalid/str_lshift_str.py
# Cannot left shift Str and Str
x: str = "hello" << "hello"
